--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -944,7 +944,7 @@
     <div id="ThongTinGV">
         <div class="TTGV">
             <span class="label">Họ và tên:</span>
-            <span class="value" id="tenGV">Nguyễn Văn A</span>
+            <span class="value" id="tenGV">Trần Thị B</span>
         </div>
         <div class="TTGV">
             <span class="label">Mã giáo viên:</span>
@@ -968,7 +968,6 @@
         </div>
     </div>
     <div id="ChucNangTTCN">
-        <button id="btnSuaTTCN"><i class="fa-solid fa-pen-to-square"></i>Sửa thông tin</button>
         <button id="btnDoiMatKhau"><i class="fa-solid fa-key"></i>Đổi mật khẩu</button>
     </div>
     </div>
