--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -978,20 +978,21 @@
         <div id="ThongTinGV">
         <div class="TTGV">
             <span class="label">Mật khẩu cũ:</span>
-            <input class="value" id="mkcu">
+            <input class="value" type="password" id="mkcu">
         </div>
         <div class="TTGV">
             <span class="label">Mật khẩu mới:</span>
-            <input class="value" id="makmoi" >
+            <input class="value" type="password" id="makmoi">
         </div>
         <div class="TTGV">
             <span class="label">Nhập lại mật khẩu mới:</span>
-            <input class="value" id="mkmoinl" >
+            <input class="value" type="password" id="mkmoinl">
         </div>
     </div>
     <div id="ChucNangTTCN">
         <button id="btnXacNhanDoiMatKhau"><i class="fa-solid fa-key"></i>Xác nhận đổi mật khẩu</button>
         <button id="btnHuyDoiMK"><i class="fa-solid fa-xmark"></i>Hủy</button>
+        <button id="btnbochan"><i class="fa-solid fa-eye"></i></button>
     </div>
     </div>
     </div>
