--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -862,6 +862,7 @@
             <div id="KyLich">
                 <span>Kỳ học:</span>
                 <select id="chonKyHocLich">
+                    <option value="0">Tất cả</option>
                     <option value="1">Kỳ 1</option>
                     <option value="2">Kỳ 2</option>
                 </select>
@@ -897,7 +898,7 @@
                         <span id="PhongHoc">306</span>
                     </td>
                     <td>
-                        <span class="KyHoc" >1</span>
+                        <span class="KyHoc" >2</span>
                     </td>
                     <td>
                         <span id="TietLichHoc">123--------</span>
@@ -906,6 +907,28 @@
                         <span id="LichHoc">12345-789---------</span>
                     <td>
                         <span class="Ngay">3</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span id="TenMon">Toán</span><br>
+                    </td>
+                    <td>
+                        <span class="MaLop" >7A</span>
+                    </td>
+                    <td>
+                        <span id="PhongHoc">307</span>
+                    </td>
+                    <td>
+                        <span class="KyHoc" >1</span>
+                    </td>
+                    <td>
+                        <span id="TietLichHoc">--345------</span>
+                    </td>
+                    <td>
+                        <span id="LichHoc">-----67890123-----</span>
+                    <td>
+                        <span class="Ngay">5</span>
                     </td>
                 </tr>
                 <tr>
