Update date format for teacher's birth date input

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -978,7 +978,7 @@
         </div>
         <div class="TTGV">
             <span class="label">Ngày sinh:</span>
-            <input class="value" id="ngaySinhGV" value="01/01/1980">
+            <input class="value" id="ngaySinhGV" value="1980-01-01">
         </div>
         <div class="TTGV">
             <span class="label">Chuyên môn:</span>
