fix scroll trang QL hoc sinh

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -211,88 +211,89 @@
                     </div>
                 </form>
             </div>
-
-            <table class="student-table">
-                <thead>
-                    <tr>
-                        <th>Họ tên</th>
-                        <th>Lớp</th>
-                        <th>Ngày sinh</th>
-                        <th>Phụ huynh</th>
-                        <th>Số điện thoại</th>
-                        <th>Địa chỉ</th>
-                        <th>Trạng thái</th>
-                        <th>Thao tác</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Nguyễn Văn A</td>
-                        <td>1A</td>
-                        <td>15/3/2012</td>
-                        <td>Nguyễn Thị B</td>
-                        <td>0123456789</td>
-                        <td>Hà Nội</td>
-                        <td><span class="status active">Đang học</span></td>
-                        <td class="actions">
-                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Trần Thị B</td>
-                        <td>2E</td>
-                        <td>5/12/2011</td>
-                        <td>Trần Thị L</td>
-                        <td>0123456789</td>
-                        <td>Hà Nội</td>
-                        <td><span class="status active">Đang học</span></td>
-                        <td class="actions">
-                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Đỗ Hữu Q</td>
-                        <td>1A</td>
-                        <td>10/8/2012</td>
-                        <td>Nguyễn Văn T</td>
-                        <td>0123456789</td>
-                        <td>Hà Nội</td>
-                        <td><span class="status active">Đang học</span></td>
-                        <td class="actions">
-                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Đỗ Hữu A</td>
-                        <td>1A</td>
-                        <td>14/3/2012</td>
-                        <td>Đỗ Hữu M</td>
-                        <td>0123456789</td>
-                        <td>Hà Nội</td>
-                        <td><span class="status active">Đang học</span></td>
-                        <td class="actions">
-                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Lâm Xung</td>
-                        <td>2E</td>
-                        <td>15/9/2011</td>
-                        <td>Nguyễn S</td>
-                        <td>0123456789</td>
-                        <td>Hà Nội</td>
-                        <td><span class="status active">Đang học</span></td>
-                        <td class="actions">
-                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-wrapper">
+                <table class="student-table">
+                    <thead>
+                        <tr>
+                            <th>Họ tên</th>
+                            <th>Lớp</th>
+                            <th>Ngày sinh</th>
+                            <th>Phụ huynh</th>
+                            <th>Số điện thoại</th>
+                            <th>Địa chỉ</th>
+                            <th>Trạng thái</th>
+                            <th>Thao tác</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Nguyễn Văn A</td>
+                            <td>1A</td>
+                            <td>15/3/2012</td>
+                            <td>Nguyễn Thị B</td>
+                            <td>0123456789</td>
+                            <td>Hà Nội</td>
+                            <td><span class="status active">Đang học</span></td>
+                            <td class="actions">
+                                <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Trần Thị B</td>
+                            <td>2E</td>
+                            <td>5/12/2011</td>
+                            <td>Trần Thị L</td>
+                            <td>0123456789</td>
+                            <td>Hà Nội</td>
+                            <td><span class="status active">Đang học</span></td>
+                            <td class="actions">
+                                <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Đỗ Hữu Q</td>
+                            <td>1A</td>
+                            <td>10/8/2012</td>
+                            <td>Nguyễn Văn T</td>
+                            <td>0123456789</td>
+                            <td>Hà Nội</td>
+                            <td><span class="status active">Đang học</span></td>
+                            <td class="actions">
+                                <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Đỗ Hữu A</td>
+                            <td>1A</td>
+                            <td>14/3/2012</td>
+                            <td>Đỗ Hữu M</td>
+                            <td>0123456789</td>
+                            <td>Hà Nội</td>
+                            <td><span class="status active">Đang học</span></td>
+                            <td class="actions">
+                                <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Lâm Xung</td>
+                            <td>2E</td>
+                            <td>15/9/2011</td>
+                            <td>Nguyễn S</td>
+                            <td>0123456789</td>
+                            <td>Hà Nội</td>
+                            <td><span class="status active">Đang học</span></td>
+                            <td class="actions">
+                                <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteStudent"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
 
         <!-- Các section khác -->
