fix scroll trang QL Lop hoc

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -309,65 +309,67 @@
                     <button class="addclass-btn"><i class="fa-solid fa-plus"></i>Tạo lớp mới</button>
                 </div>
             </div>
-            <table class="class-table">
-                <thead>
-                    <tr>
-                        <th>Tên lớp</th>
-                        <th>Khối</th>
-                        <th>GVCN</th>
-                        <th>Sĩ số</th>
-                        <th>Phòng học</th>
-                        <th>Trạng thái</th>
-                        <th>Thao tác</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1A</td>
-                        <td>Khối 1</td>
-                        <td>Nguyễn Thị B</td>
-                        <td>38</td>
-                        <td>A101</td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1B</td>
-                        <td>Khối 1</td>
-                        <td>Nguyễn Thu H</td>
-                        <td>39</td>
-                        <td>A102</td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1C</td>
-                        <td>Khối 1</td>
-                        <td>Phạm T</td>
-                        <td>32</td>
-                        <td>A103</td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2E</td>
-                        <td>Khối 2</td>
-                        <td>Trần Thị P</td>
-                        <td>41</td>
-                        <td>B101</td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-class-wrapper">
+                <table class="class-table">
+                    <thead>
+                        <tr>
+                            <th>Tên lớp</th>
+                            <th>Khối</th>
+                            <th>GVCN</th>
+                            <th>Sĩ số</th>
+                            <th>Phòng học</th>
+                            <th>Trạng thái</th>
+                            <th>Thao tác</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1A</td>
+                            <td>Khối 1</td>
+                            <td>Nguyễn Thị B</td>
+                            <td>38</td>
+                            <td>A101</td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1B</td>
+                            <td>Khối 1</td>
+                            <td>Nguyễn Thu H</td>
+                            <td>39</td>
+                            <td>A102</td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1C</td>
+                            <td>Khối 1</td>
+                            <td>Phạm T</td>
+                            <td>32</td>
+                            <td>A103</td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>2E</td>
+                            <td>Khối 2</td>
+                            <td>Trần Thị P</td>
+                            <td>41</td>
+                            <td>B101</td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
         <div class="overlayclass" id="overlayclass"></div>
         <div class="modal" id="classModal">
